@startuml
skinparam classAttributeIconSize 0

package UI {
class CreateNewQuestionnaireUI {
}
}

package Controller{
class CreateNewQuestionnaireController {

}
}

package Questionnaire <<Aggregate>> {
entity Questionnaire <<Entity>> <<Root>> {
}
}


CreateNewQuestionnaireUI ...> CreateNewQuestionnaireController
CreateNewQuestionnaireController ...> Questionnaire


@enduml